--- a/kontakt.html
+++ b/kontakt.html
@@ -32,5 +32,6 @@
         <p id="er"></p>
 </main>
 <script src="kontakt.js"></script>
+<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(100571)</script>
 </body>
 </html>
