--- a/onama.html
+++ b/onama.html
@@ -30,5 +30,6 @@
     Svi naši telefoni su NOVI I ORIGINALNI!</p>
 </main>
 <script src="kontakt.js"></script>
+<script src="https://account.snatchbot.me/script.js"></script><script>window.sntchChat.Init(100571)</script>
 </body>
 </html>
